Geometry nodes lets users create negative material indices #100952

Closed
opened 2022-09-09 19:16:30 +02:00 by D0ppelgaenger · 8 comments

System Information
Operating system: Windows-10-10.0.22000-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 3070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 516.94

Blender Version
Broken: version: 3.4.0 Alpha, branch: master, commit date: 2022-09-07 19:33, hash: 0a32f6b76a
Worked: 3.3.0 release

Short description of error
If an object has more than 1 material and the material index gets set to a negative value (via GN), blender crashes.
I think related to https://developer.blender.org/T98937

Exact steps for others to reproduce the error
Open test file
Set the integer connected to the material index to a negative value
Update again, by attempting to move the viewport or changing the value again
blender crashes
MatIndCrash.blend

**System Information** Operating system: Windows-10-10.0.22000-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 3070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 516.94 **Blender Version** Broken: version: 3.4.0 Alpha, branch: master, commit date: 2022-09-07 19:33, hash: `0a32f6b76a` Worked: 3.3.0 release **Short description of error** If an object has more than 1 material and the material index gets set to a negative value (via GN), blender crashes. I think related to https://developer.blender.org/T98937 **Exact steps for others to reproduce the error** Open test file Set the integer connected to the material index to a negative value Update again, by attempting to move the viewport or changing the value again blender crashes [MatIndCrash.blend](https://archive.blender.org/developer/F13473233/MatIndCrash.blend)
Author

Added subscriber: @Leo-Luther

Added subscriber: @Leo-Luther

#102926 was marked as duplicate of this issue

#102926 was marked as duplicate of this issue
Member

Added subscriber: @HooglyBoogly

Added subscriber: @HooglyBoogly
Hans Goudey self-assigned this 2022-09-09 20:13:57 +02:00
Member

Thanks for the report. Looks like I really need to finish D15548.

Thanks for the report. Looks like I really need to finish [D15548](https://archive.blender.org/developer/D15548).

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Hans Goudey changed title from Geometry nodes: Crash with negative material index to Geometry nodes lets the user create negative material indices 2022-09-09 22:00:48 +02:00
Hans Goudey changed title from Geometry nodes lets the user create negative material indices to Geometry nodes lets users create negative material indices 2022-09-09 22:01:19 +02:00

This issue was referenced by 8934f00ac5

This issue was referenced by 8934f00ac5701ea349f2bcccab32e252c79aa730
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Member

Added subscribers: @Vyach, @wannes.malfait, @mod_moder

Added subscribers: @Vyach, @wannes.malfait, @mod_moder
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#100952
No description provided.